Fix line spacing for display names that break line

--- a/client/src/styles/profile.module.css
+++ b/client/src/styles/profile.module.css
@@ -7,6 +7,7 @@
 	width: 250px;
 	height: 250px;
 	border-radius: 9999px;
+	flex-shrink: 0;
 	overflow: hidden;
 	background-color: gray;
 }
@@ -21,6 +22,11 @@
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
+}
+
+.headerBox h1 {
+	line-height: 1.1;
+	margin: 10px 0 10px;
 }
 
 .current {
